# redteam-arena

./: README.md  pyproject.toml  requirements.txt
redteam/: __init__.py  cli.py  evaluator.py  model.py
redteam/attacks/: dan.py
tests/: test_evaluator.py
